Show selected order ID in screen

--- a/src/app/master-view/master-view.component.html
+++ b/src/app/master-view/master-view.component.html
@@ -114,6 +114,7 @@
         </igx-grid>
       </div>
       <div class="column-layout group_18">
+        <span>selectedOrderId: {{selectedOrderId}}</span>
         <igx-grid [data]="northwindJasonApiCustomerOrderDetailsOrderId" primaryKey="productName" displayDensity="cosy" [allowFiltering]="true" filterMode="excelStyleFilter" class="grid">
           <igx-grid-toolbar>
             <igx-grid-toolbar-title>Order details</igx-grid-toolbar-title>
